Production/Production/src/objects/Payment_Plan_Charge__c.object
<CustomObject>
    <fields>
        <fullName>Adjustment_Amount__c</fullName>
        <label>Adjustment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Adjustment_Type__c</fullName>
        <label>Adjustment Type</label>
        <picklist>
            <picklistValues>
                <fullName>Remove</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Add</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Charge_Name__c</fullName>
        <label>Charge Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Charge_Type__c</fullName>
        <label>Charge Type</label>
        <picklist>
            <picklistValues>
                <fullName>MRC Line Item</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Charge</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Payment_Plan__c</fullName>
        <label>Payment Plan</label>
        <referenceTo>Payment_Plan__c</referenceTo>
        <relationshipLabel>Payment Plan Charges</relationshipLabel>
        <relationshipName>Payment_Plan_Charges</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Payment Plan Charge</label>
    <nameField>
        <label>Payment Plan Charges Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Payment Plan Charges</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>